Optimized router code, fixed sql and updated swagger
